deprecate the recruiters
- fix undeveloped logging warnings
- rewrote (or updated) some documentation

- added support for the new configuration fields into CommuniqueEditor
- refactor field names in CommuniqueEditor
- fix bug in CommuniqueSwingUtilities.setupDimensions